visual representation of schizophrenia

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "from sklearn import preprocessing\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, KBinsDiscretizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, ConfusionMatrixDisplay, RocCurveDisplay, precision_recall_curve, PrecisionRecallDisplay, classification_report\n",
     "from sklearn.svm import SVC\n",
@@ -22,34 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        Insolation, kWh/m2 per yr  Unshaded roof area (m2)         Suitability\n",
-      "0                       1003.0588                  16.4332  excellent suitable\n",
-      "1                        975.4151                  52.2486       well suitable\n",
-      "2                        983.2857                  11.7170       well suitable\n",
-      "3                        974.2069                  22.4861       well suitable\n",
-      "4                       1024.0000                  18.4168  excellent suitable\n",
-      "...                           ...                      ...                 ...\n",
-      "158143                  1050.9727                  79.4717  excellent suitable\n",
-      "158144                  1023.8333                  10.8315  excellent suitable\n",
-      "158145                   970.0000                  11.9112       well suitable\n",
-      "158146                   923.0000                  12.7568            suitable\n",
-      "158147                  1006.0213                  49.6348  excellent suitable\n",
-      "\n",
-      "[158148 rows x 3 columns]\n",
-      "   Insolation, kWh/m2 per yr  Unshaded roof area (m2)         Suitability\n",
-      "0                  1003.0588                  16.4332  excellent suitable\n",
-      "1                   975.4151                  52.2486       well suitable\n",
-      "2                   983.2857                  11.7170       well suitable\n",
-      "3                   974.2069                  22.4861       well suitable\n",
-      "4                  1024.0000                  18.4168  excellent suitable\n",
-      "128099 30049\n"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_excel(\u001b[39m\"\u001b[39m\u001b[39msolar-potential-2.xlsx\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(data)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(data\u001b[39m.\u001b[39mhead())\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
@@ -64,6 +48,13 @@
     "train_x, test_x, train_y, test_y = train_test_split(data2,data1, test_size=0.19)\n",
     "print(len(train_x),len(test_x))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -177,6 +168,157 @@
     "\n",
     "# rfc_disp.plot(ax=ax1)\n",
     "# pr_display.plot(ax=ax2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Insolation, kWh/m2 per yr  Unshaded roof area (m2)  PV generation (kWh/yr)\n",
+      "0                  1003.0588                  16.4332               1483.5100\n",
+      "1                   975.4151                  52.2486               4586.7646\n",
+      "2                   983.2857                  11.7170               1036.9071\n",
+      "3                   974.2069                  22.4861               1971.5488\n",
+      "4                  1024.0000                  18.4168               1697.2917\n",
+      "[[1483.51  ]\n",
+      " [4586.7646]\n",
+      " [1036.9071]\n",
+      " ...\n",
+      " [1039.8474]\n",
+      " [1059.7069]\n",
+      " [4494.0313]]\n",
+      "128099 30049\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.read_excel(\"solar-potential-2.xlsx\", usecols=[\"Insolation, kWh/m2 per yr\",\"Unshaded roof area (m2)\",\"PV generation (kWh/yr)\"])\n",
+    "print(data.head())\n",
+    "\n",
+    "data2 = data[[\"Insolation, kWh/m2 per yr\", \"Unshaded roof area (m2)\"]].copy()\n",
+    "data1 = data[\"PV generation (kWh/yr)\"].copy()\n",
+    "data1 = data1.to_numpy()\n",
+    "data2 = data2.to_numpy()\n",
+    "print(data1)\n",
+    "train_x, test_x, train_y, test_y = train_test_split(data2,data1, test_size=0.19)\n",
+    "print(len(train_x),len(test_x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1483.51  ]\n",
+      " [4586.7646]\n",
+      " [1036.9071]\n",
+      " ...\n",
+      " [1039.8474]\n",
+      " [1059.7069]\n",
+      " [4494.0313]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/site-packages/sklearn/utils/validation.py:1143: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown label type: 'continuous'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 13\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39m# data1 = data[[\"PV generation (kWh/yr)\"]].copy()\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m# data1 = data.copy()\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39m# data2 = data[[\"Insolation, kWh/m2 per yr\", \"Unshaded roof area (m2)\"]].copy()\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[39m# data1 = data1.to_numpy()\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[39m# data2 = data2.to_numpy()\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(data1)\n\u001b[0;32m---> 13\u001b[0m svc\u001b[39m.\u001b[39;49mfit(train_x,train_y)\n\u001b[1;32m     14\u001b[0m pred \u001b[39m=\u001b[39m svc\u001b[39m.\u001b[39mpredict(test_x)\n\u001b[1;32m     16\u001b[0m \u001b[39m# Performance report of SVM \u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/pipeline.py:405\u001b[0m, in \u001b[0;36mPipeline.fit\u001b[0;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[1;32m    403\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_final_estimator \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpassthrough\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    404\u001b[0m         fit_params_last_step \u001b[39m=\u001b[39m fit_params_steps[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39msteps[\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m][\u001b[39m0\u001b[39m]]\n\u001b[0;32m--> 405\u001b[0m         \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_final_estimator\u001b[39m.\u001b[39;49mfit(Xt, y, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mfit_params_last_step)\n\u001b[1;32m    407\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/svm/_base.py:201\u001b[0m, in \u001b[0;36mBaseLibSVM.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    191\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    192\u001b[0m     X, y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_data(\n\u001b[1;32m    193\u001b[0m         X,\n\u001b[1;32m    194\u001b[0m         y,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    198\u001b[0m         accept_large_sparse\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m    199\u001b[0m     )\n\u001b[0;32m--> 201\u001b[0m y \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_targets(y)\n\u001b[1;32m    203\u001b[0m sample_weight \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39masarray(\n\u001b[1;32m    204\u001b[0m     [] \u001b[39mif\u001b[39;00m sample_weight \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m sample_weight, dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mfloat64\n\u001b[1;32m    205\u001b[0m )\n\u001b[1;32m    206\u001b[0m solver_type \u001b[39m=\u001b[39m LIBSVM_IMPL\u001b[39m.\u001b[39mindex(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_impl)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/svm/_base.py:745\u001b[0m, in \u001b[0;36mBaseSVC._validate_targets\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m    743\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_targets\u001b[39m(\u001b[39mself\u001b[39m, y):\n\u001b[1;32m    744\u001b[0m     y_ \u001b[39m=\u001b[39m column_or_1d(y, warn\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m--> 745\u001b[0m     check_classification_targets(y)\n\u001b[1;32m    746\u001b[0m     \u001b[39mcls\u001b[39m, y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(y_, return_inverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m    747\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclass_weight_ \u001b[39m=\u001b[39m compute_class_weight(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mclass_weight, classes\u001b[39m=\u001b[39m\u001b[39mcls\u001b[39m, y\u001b[39m=\u001b[39my_)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/utils/multiclass.py:207\u001b[0m, in \u001b[0;36mcheck_classification_targets\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m    199\u001b[0m y_type \u001b[39m=\u001b[39m type_of_target(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    200\u001b[0m \u001b[39mif\u001b[39;00m y_type \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m [\n\u001b[1;32m    201\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mbinary\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    202\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mmulticlass\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mmultilabel-sequences\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    206\u001b[0m ]:\n\u001b[0;32m--> 207\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mUnknown label type: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m y_type)\n",
+      "\u001b[0;31mValueError\u001b[0m: Unknown label type: 'continuous'"
+     ]
+    }
+   ],
+   "source": [
+    "svc = Pipeline([\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\"svm_clf\", SVC(kernel=\"poly\", degree=4, coef0=1, C=2.3, gamma=\"auto\"))\n",
+    "])\n",
+    "# data1 = data[[\"PV generation (kWh/yr)\"]].copy()\n",
+    "# data1 = data.copy()\n",
+    "# data2 = data[[\"Insolation, kWh/m2 per yr\", \"Unshaded roof area (m2)\"]].copy()\n",
+    "\n",
+    "# set(data1.columns).symmetric_difference(data2.columns)\n",
+    "# data1 = data1.to_numpy()\n",
+    "# data2 = data2.to_numpy()\n",
+    "print(data1)\n",
+    "svc.fit(train_x,train_y)\n",
+    "pred = svc.predict(test_x)\n",
+    "\n",
+    "# Performance report of SVM \n",
+    "print(f\"Accuracy Score for SVC: {accuracy_score(pred, test_y)*100}%\")\n",
+    "cm = confusion_matrix(test_y, pred, labels = svc.classes_)\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=svc.classes_)\n",
+    "disp.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1003.0588   16.4332 1483.51  ]\n",
+      " [ 975.4151   52.2486 4586.7646]\n",
+      " [ 983.2857   11.717  1036.9071]\n",
+      " ...\n",
+      " [ 970.       11.9112 1039.8474]\n",
+      " [ 923.       12.7568 1059.7069]\n",
+      " [1006.0213   49.6348 4494.0313]]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Unknown label type: 'continuous-multioutput'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mprint\u001b[39m(data2)\n\u001b[1;32m      3\u001b[0m \u001b[39m# Fit RFC and predict using the testing set\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m rfc\u001b[39m.\u001b[39;49mfit(train_x, train_y)\n\u001b[1;32m      5\u001b[0m pred2 \u001b[39m=\u001b[39m rfc\u001b[39m.\u001b[39mpredict(test_x)\n\u001b[1;32m      7\u001b[0m \u001b[39m# Performance Report of rfc\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/ensemble/_forest.py:385\u001b[0m, in \u001b[0;36mBaseForest.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    378\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    379\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mSum of y is not strictly positive which \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    380\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mis necessary for Poisson regression.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    381\u001b[0m         )\n\u001b[1;32m    383\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_outputs_ \u001b[39m=\u001b[39m y\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]\n\u001b[0;32m--> 385\u001b[0m y, expanded_class_weight \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_y_class_weight(y)\n\u001b[1;32m    387\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(y, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m!=\u001b[39m DOUBLE \u001b[39mor\u001b[39;00m \u001b[39mnot\u001b[39;00m y\u001b[39m.\u001b[39mflags\u001b[39m.\u001b[39mcontiguous:\n\u001b[1;32m    388\u001b[0m     y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mascontiguousarray(y, dtype\u001b[39m=\u001b[39mDOUBLE)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/ensemble/_forest.py:746\u001b[0m, in \u001b[0;36mForestClassifier._validate_y_class_weight\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m    745\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_validate_y_class_weight\u001b[39m(\u001b[39mself\u001b[39m, y):\n\u001b[0;32m--> 746\u001b[0m     check_classification_targets(y)\n\u001b[1;32m    748\u001b[0m     y \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mcopy(y)\n\u001b[1;32m    749\u001b[0m     expanded_class_weight \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/site-packages/sklearn/utils/multiclass.py:207\u001b[0m, in \u001b[0;36mcheck_classification_targets\u001b[0;34m(y)\u001b[0m\n\u001b[1;32m    199\u001b[0m y_type \u001b[39m=\u001b[39m type_of_target(y, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    200\u001b[0m \u001b[39mif\u001b[39;00m y_type \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m [\n\u001b[1;32m    201\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mbinary\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    202\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mmulticlass\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    205\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mmultilabel-sequences\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m    206\u001b[0m ]:\n\u001b[0;32m--> 207\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mUnknown label type: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m y_type)\n",
+      "\u001b[0;31mValueError\u001b[0m: Unknown label type: 'continuous-multioutput'"
+     ]
+    }
+   ],
+   "source": [
+    "rfc = RandomForestClassifier(n_estimators=50, max_features=\"sqrt\", max_samples=None)\n",
+    "print(data2)\n",
+    "# Fit RFC and predict using the testing set\n",
+    "rfc.fit(train_x, train_y)\n",
+    "pred2 = rfc.predict(test_x)\n",
+    "\n",
+    "# Performance Report of rfc\n",
+    "print(f\"Accuracy Score of Random Forest Classifier: {accuracy_score(pred2,test_y)*100}%\")\n",
+    "cm = confusion_matrix(test_y, pred2, labels = rfc.classes_)\n",
+    "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=rfc.classes_)\n",
+    "disp.plot()"
    ]
   }
  ],
